#45-114 Adds checksum API method
